# aoc

./: .gitignore
2023/rust/: Cargo.toml
2023/rust/daily-template/: Cargo.toml
2023/rust/daily-template/src/: part1.rs
2023/rust/day-01/: Cargo.toml
2023/rust/day-01/src/: part1.rs  part2.rs  part2_1.rs
2023/rust/day-02/: Cargo.toml
2023/rust/day-02/src/: part1.rs  part2.rs
2023/rust/day-03/: Cargo.toml
2023/rust/day-03/src/: part1.rs  part2.rs
2023/rust/day-04/: Cargo.toml
2023/rust/day-04/src/: part1.rs  part2.rs  part2_1.rs
2023/rust/day-06/: Cargo.toml
2023/rust/day-06/src/: part1.rs  part2.rs
2023/rust/day-07/: Cargo.toml
2023/rust/day-07/src/: part1.rs  part2.rs
2023/rust/day-08/: Cargo.toml
2023/rust/day-08/src/: part1.rs  part2.rs
2023/rust/day-09/: Cargo.toml
2023/rust/day-09/src/: lib.rs  part1.rs  part1_1.rs  part2.rs
2023/rust/day-10/: Cargo.toml
2023/rust/day-10/src/: part1.rs  part2.rs
2024/rust/: Cargo.toml  benchmarks.txt  justfile
2024/rust/daily-template/: Cargo.toml
2024/rust/daily-template/benches/: benchmarks.rs
2024/rust/day-01/: Cargo.toml
2024/rust/day-01/src/: part1.rs  part2.rs
2024/rust/day-02/: Cargo.toml
2024/rust/day-02/src/: part1.rs  part2.rs
2024/rust/scripts/: get-aoc-input.rs
