[package]
name = "day-01"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true

[dev-dependencies]
divan.workspace = true
rstest.workspace = true
test-log.workspace = true

[[bench]]
name = "day-01-bench"
path = "benches/benchmarks.rs"
harness = false
